# ChangeLog for dev-lang/rakudo
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/rakudo/ChangeLog,v 1.17 2011/07/31 13:42:42 patrick Exp $

  31 Jul 2011; Patrick Lauer <patrick@gentoo.org> rakudo-2011.07.ebuild:
  Fixing parrot version for #377157

*rakudo-2011.07 (30 Jul 2011)

  30 Jul 2011; Patrick Lauer <patrick@gentoo.org> -rakudo-2010.07.ebuild,
  -rakudo-2010.08.1.ebuild, -rakudo-2010.10.ebuild, -rakudo-2010.12.ebuild,
  -rakudo-2011.01.ebuild, +rakudo-2011.07.ebuild:
  Bump, remove old

*rakudo-2011.04 (05 May 2011)

  05 May 2011; Patrick Lauer <patrick@gentoo.org> rakudo-2011.01.ebuild,
  +rakudo-2011.04.ebuild:
  Bump

*rakudo-2011.01 (09 Feb 2011)

  09 Feb 2011; Patrick Lauer <patrick@gentoo.org> +rakudo-2011.01.ebuild:
  Bump for #354217

*rakudo-2010.12 (16 Jan 2011)

  16 Jan 2011; Patrick Lauer <patrick@gentoo.org> +rakudo-2010.12.ebuild:
  Bump for #350626

*rakudo-2010.10 (01 Nov 2010)

  01 Nov 2010; Patrick Lauer <patrick@gentoo.org> +rakudo-2010.10.ebuild:
  Followup bump for #343267

*rakudo-2010.08.1 (11 Sep 2010)

  11 Sep 2010; Torsten Veller <tove@gentoo.org> -rakudo-2010.08.ebuild,
  +rakudo-2010.08.1.ebuild:
  Version bump

*rakudo-2010.08 (11 Sep 2010)

  11 Sep 2010; Torsten Veller <tove@gentoo.org> +rakudo-2010.08.ebuild:
  Version bump

  11 Sep 2010; Torsten Veller <tove@gentoo.org> -rakudo-2010.05.ebuild,
  -rakudo-2010.06.ebuild:
  Cleanup

*rakudo-2010.07 (23 Jul 2010)

  23 Jul 2010; Torsten Veller <tove@gentoo.org> +rakudo-2010.07.ebuild:
  Version bump

  18 Jun 2010; Patrick Lauer <patrick@gentoo.org> -rakudo-2009.12.ebuild,
  -rakudo-2010.02.ebuild, -rakudo-2010.04.ebuild:
  Remove old

*rakudo-2010.06 (18 Jun 2010)

  18 Jun 2010; Patrick Lauer <patrick@gentoo.org> +rakudo-2010.06.ebuild:
  Bump

*rakudo-2010.05 (24 May 2010)

  24 May 2010; Patrick Lauer <patrick@gentoo.org> +rakudo-2010.05.ebuild:
  Bump for #321269

*rakudo-2010.04 (25 Apr 2010)
