@@ -1,6 +1,8 @@
 DIST rakudo-2011.04.tar.gz 950891 RMD160 469e39bfa2c48ed1d4343159f769fa46d3b17ab6 SHA1 cb17ff8378bcf46a5f9bbf5c0e9653002cc3c310 SHA256 51a5a9affc2a4fb1719bc070e2d68d1b242b55ed805fe2c0c298ca38f1d09764
 DIST rakudo-2011.07.tar.gz 941064 RMD160 08c12dad2a8209b8c5acb08b59c87bf16fdb0e2c SHA1 9609d97f9d53a566f3896b8bc7772fbc6d832259 SHA256 2f1189e20de55f4889088c66242064bb1c4148ea0fb1a2d6d9ab24336b18604c
+DIST rakudo-2011.10.tar.gz 971931 RMD160 e6dcb2d034713da20e369105b30aaf2910745694 SHA1 58840b3f03b4d530515e35d0600ee8380d8841bc SHA256 5538c573c1d6ef89c5f403378f4d0ba4f36bd026688d80ad5992e2e7781dab24
 EBUILD rakudo-2011.04.ebuild 1082 RMD160 11d41b97e270b10102214bc1b978c3384290c50a SHA1 681313dba0406e22f67a8179cf0e7ad12aac265e SHA256 eecb04feeada1a95863ffea297b228f2f3dfdd58d88a994068de75c1f44d0f13
 EBUILD rakudo-2011.07.ebuild 1082 RMD160 beb81db48c049fc3ad80eeca5bc7d3a18bd5f7de SHA1 dc826ec2bb3864f6acc1b286e19da426cb7d91a3 SHA256 a4095c8a4d4f31b0c0dc53156a16ba70e3e0033533ef780e3b0ba79579592adb
-MISC ChangeLog 2624 RMD160 c8b810ae5e7b2a6cb5a7b1ec1fcc6a9c5b04f90d SHA1 5f1367f2dcfe5df6c84c88901f2f10b0ee53f508 SHA256 65df75383ed66a2155fb7c3650343a99b96311f32058d741e263a9eaaaa043e5
+EBUILD rakudo-2011.10.ebuild 1140 RMD160 b02ee01cae1a3f92793bc03a0c2d9e921a1fd4f7 SHA1 dce9ccc939ce756bdec69b7a06b7450bd028335f SHA256 edeb5009a7977575c7dd3b3eaeb14079be2215d76be8c0f9d6599a0351b5c05c
+MISC ChangeLog 2783 RMD160 0b76c6e52c2ce04f80c3918c07d0ce75451e0f99 SHA1 0627876dd348e84360dcb5e0434f7f78c285f3ea SHA256 bcf7e57ab166dee47ec40883119805637f64aa43f88a595b868ae44a91dd2429
 MISC metadata.xml 252 RMD160 d329c5ff5d47871cbdafab709322b77ce275f0ad SHA1 dd8f1f3d6232e95a5753bb993d4ed8752d89446f SHA256 2d53d1d9369e88cc0380590dbb20a2e458cb651a0aa935e4b102bd465d54c524
