@@ -1,0 +1,4 @@
+DIST Sys-Virt-0.2.4.tar.gz 54780 RMD160 8d584622e3e1fc60070a64a171a939492a2f1ac0 SHA1 dd03539544c7a3ab6f0c9253167c923eef3a6819 SHA256 d51b6e7de3a59d87457bd7673e936905a3863cd737de03b24537129622a6d979
+EBUILD Sys-Virt-0.2.4.ebuild 661 RMD160 af2295cda6d7525ef263db4108075a29f47c112d SHA1 c6962a892e3f98a9d059d77d45ba87dd8824d3ae SHA256 a84546376c44664c08cf404e85af381eceb32507e442d637a7cc8bde10defb34
+MISC ChangeLog 391 RMD160 cc9bdea97ae73ac7a2094b1fd14f1a0f4778a37c SHA1 ad58f024ddc3f5e8f9a7a7b752e00fd214afaf15 SHA256 fde274f5f64df5a9934ee27c045215dd98a80a92d32179a3348cb53c55ebc69a
+MISC metadata.xml 327 RMD160 4d929f82166d31d5710f17e78f8c66f8fecef407 SHA1 cde31cdfff5ff2543719f2d83cf074261e06910a SHA256 ad8f529f9a202f44af4371b094874e9cd0857e8325396676a189b91e5dd544fc
