@@ -1,6 +1,12 @@
 # ChangeLog for net-libs/webkit-gtk
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/webkit-gtk/ChangeLog,v 1.125 2011/10/21 15:01:50 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/webkit-gtk/ChangeLog,v 1.127 2011/10/28 20:19:29 maekke Exp $
+
+  28 Oct 2011; Markus Meier <maekke@gentoo.org> webkit-gtk-1.4.3-r300.ebuild:
+  arm stable, bug #385699
+
+  28 Oct 2011; Markus Meier <maekke@gentoo.org> webkit-gtk-1.4.3-r200.ebuild:
+  arm stable, bug #385699
 
   21 Oct 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   webkit-gtk-1.4.3-r200.ebuild, webkit-gtk-1.4.3-r300.ebuild:
