@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/rakudo
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/rakudo/ChangeLog,v 1.17 2011/07/31 13:42:42 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/rakudo/ChangeLog,v 1.18 2011/10/28 15:21:06 patrick Exp $
+
+*rakudo-2011.10 (28 Oct 2011)
+
+  28 Oct 2011; Patrick Lauer <patrick@gentoo.org> +rakudo-2011.10.ebuild:
+  Bump for #388173, ebuild mods by Martin von Gagern
 
   31 Jul 2011; Patrick Lauer <patrick@gentoo.org> rakudo-2011.07.ebuild:
   Fixing parrot version for #377157
